<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".presentationlayer.view.LoginActivity">

    <TextView
        android:id="@+id/lastMsgTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/baloobhai_extrabold"
        android:text="@string/chat_app"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEmailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:background="@drawable/register_edittext"
        android:ems="10"
        android:fontFamily="@font/baloobhai_semibold"
        android:hint="@string/enter_email_or_password"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="#777777"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastMsgTV"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_edittext"
        android:ems="10"
        android:fontFamily="@font/baloobhai_semibold"
        android:hint="@string/enter_password"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="#777777"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/usernameEmailET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameEmailET"
        app:layout_constraintTop_toBottomOf="@+id/usernameEmailET"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/submit_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/baloobhai_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordET"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/passwordET"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloobhai_medium"
        android:text="@string/not_have_an_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBTN"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signUpPageBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/baloobhai_medium"
        android:text="@string/sign_up"
        android:textColor="@color/theme"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>